# Stm32F1RustTestExample

./: Cargo.toml  Readme.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
examples/: blink.rs
src/: lib.rs  sys.rs
tests/: example_test.rs
