[package]
name = "approach_f1"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5" }
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103"] }

cortex-m-semihosting = "0.5.0"
log = { version = "0.4.22", optional = true }
defmt = { version = "0.3.10"}
defmt-rtt = { version = "0.4.1" }

[dev-dependencies]
embedded-test = { version = "0.5.0", features = ["defmt"] }
# embedded-test = { version = "0.5.0", features = ["embassy"]}

[[bin]]
name = "hello"
test = false
bench = false

[[example]]
name = "blink"
test = false
bench = false

[[test]]
name = "example_test"
harness = false
